--- a/WDD130-WebFundamentals/wwr/styles/style.css
+++ b/WDD130-WebFundamentals/wwr/styles/style.css
@@ -1,3 +1,11 @@
+body{
+    background-color: #fefcfb;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -11,14 +19,20 @@ header{
     width: 80px;
 }
 
+#logo_link{
+    padding-top: 5px;
+}
+
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 
 nav a{
     text-align: center;
     color: #fefcfb;
     text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover{
@@ -41,47 +55,73 @@ main section{
     text-align: center;
 }
 
+main section img{
+    box-sizing: border-box;
+}
+
 #background{
     height: 725px;
     background-color: #f5dd90;
-}
-
-body{
-    background-color: #fefcfb;
 }
 
 .book, .join{
     background-color: #344c90;
     color: #fefcfb;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover{
     background-color: #3aafb9;
 }
 
+.card_img{
+    border: 10px solid #3e3e3e;
+}
+
+.rivers_card, .camping_card, .rapids_card{
+    margin: 200px 0;
+}
+
 .msg{
     background-color: #f5dd90;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2{
     color: #3e3e3e;
+    font-family: 'Roboto Condensed'
 }
 
 .msg p{
     color: #3e3e3e;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 
 .home_title{
     color: #3e3e3e;
+    font-family: 'Roboto Condensed';
+    font-size: 2em;
+    margin-top: 10px;
+
 }
 h4{
-    color: #3e3e3e
+    color: #3e3e3e;
+}
+h2{
+    margin: 0;
 }
 
 footer{
     background-color: #344c90;
     color: #fefcfb;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a{
@@ -99,4 +139,8 @@ footer p{
 
 footer p a:hover{
     text-decoration: underline;
+}
+
+footer .social img{
+    padding-top: 15px;
 }
