--- a/WDD130-WebFundamentals/positionstyles.css
+++ b/WDD130-WebFundamentals/positionstyles.css
@@ -159,43 +159,43 @@ grid-row-end: span 4;
 .content6 {
   /* This is the parent of the activity 6 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
 }
 .red6 {
-  width: 400px; 
+  width: 500px; 
   height: 200px; 
   background-color: red; 
-  grid-column: 1 / 3;
+  grid-column: 1 / 5;
+  grid-row: 1/3;
 } 
 .green6 {
-width: 200px; 
-height: 200px; 
+width: 400px; 
+height: 400px; 
 background-color: green; 
-grid-column-start: 1 / 2;
-grid-row: 4 / 5;
-margin-top: -200px;
-
+grid-column: 1 / 3;
+grid-row: 4 / 6;
+/* margin-top: -200px; */
 z-index: 1;
 } 
 
 .yellow6 {
 width: 200px; 
-height: 400px; 
+height: 600px; 
 background-color: gold; 
-grid-column: 3;
-grid-row: 3/5;
-margin-top: -100px;
-margin-left: -200px;
+grid-column: 4 / 7;
+grid-row: 3 / 6;
+/* margin-top: -100px;
+margin-left: -200px; */
 z-index: 1;
 } 
 .blue6 {
-width: 400px; 
-height: 400px; 
+width: 500px; 
+height: 500px; 
 background-color: blue; 
-grid-column: 2/3;
-grid-row: 2/4;
-margin-top: -100px;
-margin-left: -200px;
+grid-column: 2/6;
+grid-row: 2/5;
+/* margin-top: -100px;
+margin-left: -200px; */
 z-index: 0.5;
 } 
 
