--- a/WDD130-WebFundamentals/wwr/styles/style.css
+++ b/WDD130-WebFundamentals/wwr/styles/style.css
@@ -13,6 +13,8 @@ body{
 
 header{
     background-color: #344c90;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 .logo{
@@ -21,13 +23,18 @@ header{
 
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon{
     width: 80px;
     padding-top: 10px;
 }
-
+nav{
+    display: flex;
+    justify-content: space-around;
+}
 nav a{
     text-align: center;
     color: #fefcfb;
@@ -38,9 +45,26 @@ nav a{
 nav a:hover{
     background-color: #3aafb9;
 }
-
+#hero_msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero_img{
     width: 100%;
+}
+#hero_box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero_msg h4{
+    color: white;
 }
 
 #hero_msg h1, #hero_msg h4{
@@ -58,12 +82,6 @@ main section{
 main section img{
     box-sizing: border-box;
 }
-
-#background{
-    height: 725px;
-    background-color: #f5dd90;
-}
-
 .book, .join{
     background-color: #344c90;
     color: #fefcfb;
@@ -78,19 +96,63 @@ main section img{
     background-color: #3aafb9;
 }
 
+
+
+
+
+.home_grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
 .card_img{
+    width: 100%;
     border: 10px solid #3e3e3e;
+    transition: transform  .5s;
+    box-shadow: 5pc 5px 10px #6f7364;
+}
+.card_img:hover{
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .rivers_card, .camping_card, .rapids_card{
+    /* margin: auto; */
     margin: 200px 0;
-}
 
-.msg{
+}
+.rivers_card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping_card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids_card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background{
+    height: 725px;
     background-color: #f5dd90;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.msg{
+    background-color: #91e3eb;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
 
 .msg h2{
     color: #3e3e3e;
@@ -104,7 +166,7 @@ main section img{
 }
 
 .home_title{
-    color: #3e3e3e;
+    color: #f5dd90;
     font-family: 'Roboto Condensed';
     font-size: 2em;
     margin-top: 10px;
@@ -122,6 +184,9 @@ footer{
     color: #fefcfb;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a{
@@ -143,4 +208,47 @@ footer p a:hover{
 
 footer .social img{
     padding-top: 15px;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home_grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero_msg {
+        margin-top: 0;
+    }
+    #hero_msg h4 {
+        display: none;
+    }
+    .home_title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers_card, .camping_card, .rapids_card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
