--- a/WDD130-WebFundamentals/wwr/styles/style.css
+++ b/WDD130-WebFundamentals/wwr/styles/style.css
@@ -6,6 +6,8 @@ body{
     padding: 0;
 }
 
+/* START index style */
+
 #content{
     max-width: 1600px;
     margin: 0 auto;
@@ -96,10 +98,6 @@ main section img{
     background-color: #3aafb9;
 }
 
-
-
-
-
 .home_grid{
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -118,7 +116,6 @@ main section img{
 .rivers_card, .camping_card, .rapids_card{
     /* margin: auto; */
     margin: 200px 0;
-
 }
 .rivers_card{
     grid-column: 2/4;
@@ -170,11 +167,11 @@ main section img{
     font-family: 'Roboto Condensed';
     font-size: 2em;
     margin-top: 10px;
-
 }
 h4{
     color: #3e3e3e;
 }
+
 h2{
     margin: 0;
 }
@@ -183,7 +180,7 @@ footer{
     background-color: #344c90;
     color: #fefcfb;
     padding: 25px 50px;
-    margin-top: 200px;
+    /* margin-top: 200px; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -209,9 +206,78 @@ footer p a:hover{
 footer .social img{
     padding-top: 15px;
 }
+/* END index style */
+
+
+/* START rivers style */
+#banner{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    /* margin-top: -100px;*/
+} 
+
+
+
+.rivers_grid{
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+}
+.inf{
+    grid-column: 3/9;
+    grid-row: 2;
+    color: #344c90;
+    font-size: 40px;
+}
+.r_card_img{
+    width: 100%;
+    border: 5px solid #f5dd90;
+    transition: transform  .5s;
+    /* box-shadow: 5pc 5px 10px #6f7364; */
+}
+.r_card_img:hover{
+    transform: scale(1.3);
+}
+
+.salmon_card, .gray_canyon_card, .canyon_az_card{
+    margin: 100px 0;
+}
+
+.salmon_card{
+    grid-column: 2/5;
+    grid-row: 2/3;
+}
+.salmon_right{
+    grid-column: 6/11;
+    grid-row: 2/3;
+    margin-top: 100px;
+}
+
+.gray_canyon_card{
+    grid-column: 8/11;
+    grid-row: 3/5;
+}
+.gray_left{
+    grid-column: 2/7;
+    grid-row: 3/5;
+    margin-top: 100px;
+}
+
+.canyon_az_card{
+    grid-column: 2/5;
+    grid-row: 5/7;
+}
+.grand_right{
+    grid-column: 6/11;
+    grid-row: 5/7;
+    margin-top: 100px;
+}
+
+/* END rivers style */
+
 
 
 @media screen and (max-width: 900px) {
+    /* START media index style */
     #hero, .home_grid {
         display: block;
         height: auto;
@@ -251,4 +317,33 @@ footer .social img{
     footer {
         margin-top: 25px;
     }
+    /* END media index style */
+
+    /* START media rivers style */
+    #banner, .rivers_grid {
+        display: block;
+        height: auto;
+    }
+    #banner {
+        margin-top: 0;
+    }
+    .media_space{
+        height: 30px;
+    }
+    .salmon_card, .gray_canyon_card, .canyon_az_card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    .salmon_right, .gray_left, .grand_right { 
+        margin: 50px auto;
+        width: 90%;
+    }
+    /* END media rivers style */
+
+
+
+
+
+
+
 }
