--- a/WDD130-WebFundamentals/knowingperthes/styles/styles.css
+++ b/WDD130-WebFundamentals/knowingperthes/styles/styles.css
@@ -67,6 +67,7 @@ nav a:hover{
 /* START MAIN */
 .title{
     text-align: center;
+    margin-top: 110px;
 }
 
 
@@ -103,6 +104,30 @@ nav a:hover{
 }
 /* END MAIN */
 
+
+/* START "MY STORY" STYLE */
+.first_ms{
+    width: 70%; 
+    margin: 20px auto;
+    margin-top: 15px;
+    margin-bottom: 30px;
+}
+.img1_ms{
+    float: left;
+    width: 45%;
+    margin-right: 40px;
+    margin-bottom: 10px;
+}
+.img2_ms{
+    width: 100%;
+}
+
+.second_ms{
+    width: 70%; 
+    margin: 20px auto;
+    margin-top: 15px;
+}
+/* END "MY STORY" STYLE */
 
 
 /* START FOOTER */
