--- a/WDD130-WebFundamentals/knowingperthes/styles/styles.css
+++ b/WDD130-WebFundamentals/knowingperthes/styles/styles.css
@@ -129,6 +129,20 @@ nav a:hover{
 }
 /* END "MY STORY" STYLE */
 
+/* START "Dr. Perthes" STYLE */
+.first_dp{
+    width: 70%; 
+    margin: 20px auto;
+    margin-top: 15px;
+    margin-bottom: 30px;
+}
+.img1_dp{
+    float: left;
+    width: 40%;
+    margin-right: 40px;
+    margin-bottom: 10px;
+}
+/* END "Dr. Perthes" STYLE */
 
 /* START FOOTER */
 footer{
